--- a/common/build.gradle
+++ b/common/build.gradle
@@ -34,8 +34,7 @@ dependencies {
     compile deps.supportV4
     compile deps.butterknife
     compile deps.dagger
-    compile deps.annotationProcessor
-    compile deps.annotation
+    compile deps.dagger_compiler
     compile deps.multidex
     compile deps.pulltorefresh
     compile deps.simplerecyclerview
