--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
+//        classpath 'me.tatarka:gradle-retrolambda:3.6.1'
 //        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -45,17 +46,20 @@ ext.deps = [
 
         butterknife         : 'com.jakewharton:butterknife:7.0.1',
         rxandroid           : 'io.reactivex:rxandroid:1.2.1',
-        retrofit            : 'com.squareup.retrofit2:retrofit:2.2.0',
-        converterGson       : 'com.squareup.retrofit2:converter-gson:2.2.0',
-        rxjavaAdapter       : 'com.squareup.retrofit2:adapter-rxjava:2.2.0',
-        logging_interceptor : 'com.squareup.okhttp3:logging-interceptor:3.6.0',
+        retrofit            : 'com.squareup.retrofit2:retrofit:2.3.0',
+        //gson 2.7
+        converterGson       : 'com.squareup.retrofit2:converter-gson:2.3.0',
+        //rxjava 1.3.0
+        rxjavaAdapter       : 'com.squareup.retrofit2:adapter-rxjava:2.3.0',
+        logging_interceptor : 'com.squareup.okhttp3:logging-interceptor:3.8.0',
 
         dagger              : 'com.google.dagger:dagger:2.7',
-        annotationProcessor : 'com.google.dagger:dagger-compiler:2.7',
-        annotation          : 'org.glassfish:javax.annotation:10.0-b28',
+        dagger_compiler     : 'com.google.dagger:dagger-compiler:2.7',
+//        annotation          : 'org.glassfish:javax.annotation:10.0-b28',
 
         multidex            : 'com.android.support:multidex:1.0.1',
         greendao            : 'org.greenrobot:greendao:3.2.2',
+        ormlite             : 'com.j256.ormlite:ormlite-android:5.0',
 
         pulltorefresh       : 'com.yzg.pulltorefresh:library:1.0.0',
         simplerecyclerview  : 'com.yzg.simplerecyclerview:library:1.0',
