--- a/build.gradle
+++ b/build.gradle
@@ -46,11 +46,12 @@ ext.deps = [
 
         butterknife         : 'com.jakewharton:butterknife:7.0.1',
         rxandroid           : 'io.reactivex:rxandroid:1.2.1',
+        rxjava              : 'io.reactivex:rxjava:1.3.0',
         retrofit            : 'com.squareup.retrofit2:retrofit:2.3.0',
         //gson 2.7
         converterGson       : 'com.squareup.retrofit2:converter-gson:2.3.0',
         //rxjava 1.3.0
-        rxjavaAdapter       : 'com.squareup.retrofit2:adapter-rxjava:2.3.0',
+        rxjava_adapter       : 'com.squareup.retrofit2:adapter-rxjava:2.3.0',
         logging_interceptor : 'com.squareup.okhttp3:logging-interceptor:3.8.0',
 
         dagger              : 'com.google.dagger:dagger:2.7',
