--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,10 @@ android {
 
         }
         release {
-            storeFile file("../demo_keystore.jks")
-            storePassword "123456"
-            keyAlias "demo_myapp"
-            keyPassword "123456"
+            storeFile file('../demo_keystore.jks')
+            storePassword '123456'
+            keyAlias 'demo_myapp'
+            keyPassword '123456'
         }
     }
 
@@ -43,7 +43,7 @@ android {
         }
 
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
