--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:name=".app.MyApplication"
@@ -41,9 +43,9 @@
         <activity android:name=".ui.SimpleRecycleViewTest" />
         <activity android:name=".ui.LinkedMenuTest" />
         <activity android:name=".ui.ExampleMvp" />
-        <activity android:name=".test.TextureViewTest" android:screenOrientation="landscape"/>
         <activity android:name=".ui.ImageWaterActivity" />
         <activity android:name=".ui.FragmentViewPagerTest" />
+        <activity android:name=".ui.PreviewActivity" />
     </application>
 
 </manifest>
